# DiscoveryOS

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Makefile  PERFORMANCE_REPORT.md  PROJECT_AUDIT.md  README.md  TODO-manual-review.md  UI_REVIEW.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README  env.py  script.py.mako
apps/api/alembic/versions/: 202607190001_create_projects.py  202607190002_create_research_jobs.py  202607190003_create_project_memory.py
apps/api/app/: __init__.py  lifecycle.py  main.py
apps/api/app/api/: __init__.py  router.py
apps/api/app/api/dependencies/: __init__.py  request_context.py
apps/api/app/api/errors/: __init__.py  exceptions.py  handlers.py
apps/api/app/api/middleware/: __init__.py  request_id.py  timing.py
apps/api/app/api/routes/: __init__.py  health.py
apps/api/app/core/: __init__.py
apps/api/app/core/config/: __init__.py  settings.py
apps/api/app/core/logging/: __init__.py  config.py
apps/api/app/core/security/: __init__.py
apps/api/app/core/telemetry/: __init__.py
apps/api/app/schemas/: __init__.py
apps/api/src/discoveryos_api/: __init__.py  lifecycle.py  main.py
apps/api/tests/: conftest.py
apps/api/tests/unit/: test_app_factory.py  test_database.py  test_demo_pipeline.py  test_health.py  test_memory.py  test_projects.py  test_research_jobs.py
backend/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
backend/app/: __init__.py  config.py  lifecycle.py  logging_config.py  main.py
backend/app/agents/: __init__.py  base.py  openai_adapter.py  prompt_templates.py  registry.py
backend/app/agents/contradiction/: __init__.py  agent.py  detector.py  prompts.py  schemas.py  tests.py
backend/app/agents/experiment/: __init__.py  agent.py  planner.py  prompts.py  schemas.py  tests.py
backend/app/agents/extractor/: __init__.py  agent.py  extractor.py  prompts.py  schemas.py  tests.py
backend/app/agents/hypothesis/: __init__.py  agent.py
backend/app/agents/novelty/: __init__.py  agent.py  analyzer.py  prompts.py  schemas.py  tests.py
backend/app/agents/planner/: __init__.py  agent.py  planner.py  prompts.py  schemas.py  tests.py
backend/app/agents/report/: __init__.py  agent.py  prompts.py  report.py  schemas.py  tests.py
backend/app/agents/retriever/: __init__.py  agent.py  retriever.py  schemas.py  tests.py
backend/app/agents/verifier/: __init__.py  agent.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/api/routes/: __init__.py  agents.py  health.py  mcp_status.py  pipeline.py  projects.py
backend/app/database/: __init__.py  session.py
backend/app/graph/: __init__.py  builder.py  repository.py  router.py  schemas.py  workflow.py
backend/app/mcp/: __init__.py  base.py  client.py  registry.py  service.py  tests.py
backend/app/mcp/servers/: __init__.py  filesystem.py  github.py  memory.py
backend/app/models/: __init__.py  base.py
backend/app/orchestrator/: __init__.py  events.py  orchestrator.py  service.py  state.py  tests.py
backend/app/schemas/: __init__.py  agent.py  health.py  pipeline.py
backend/app/services/: __init__.py  agent_service.py  pipeline_service.py
backend/app/utils/: __init__.py  ids.py
backend/app/workspace/: __init__.py  repository.py  router.py  schemas.py  service.py  tests.py  workspace.py
backend/tests/: test_agents.py  test_contradiction.py  test_experiment.py  test_extractor.py  test_graph.py  test_health.py  test_novelty.py  test_pipeline.py  test_planner.py  test_report.py  test_retriever.py  test_workspace.py
docker/: README.md
(+171 files in other folders)
